# microgcc

./: .gitignore  Dockerfile  README.md  pyproject.toml
reports/video/: slides.ffconcat
scripts/: make_demo_video.py
src/microgcc/: __init__.py  api.py  cli.py  config.py  data.py  features.py  metrics.py  models.py  training.py  visualize.py
tests/: test_data_features.py  test_training_api.py
